--- a/app/styles/sass/_config.sass
+++ b/app/styles/sass/_config.sass
@@ -47,3 +47,11 @@ body
 	min-width: 320px
 	position: relative
 	overflow-x: hidden
+
+.container
+	max-width: 1440px
+	margin: 0 auto
+
+.container-fluid
+	width: 100%
+	margin: 0 auto
