--- a/app/styles/sass/main.sass
+++ b/app/styles/sass/main.sass
@@ -2,8 +2,10 @@
 @use 'sass:color'
 
 @import config
-@import 'blocks/**/*'
+@import product
 
+
+//header
 .headline
 	background-color: black
 	display: flex
@@ -55,9 +57,9 @@
 
 .header
 	display: flex
-	justify-content: space-around
+	justify-content: space-between
 	align-items: center
-	margin-top: 30px
+	margin: 30px 0
 	&-lang
 		display: flex
 		&-item
@@ -83,14 +85,14 @@
 	&-search
 		position: relative
 		&::before
-			content: '\f007'
+			content: '\f002'
 			font-family: "Font Awesome 6 Free"
 			display: inline-block
-			font-weight: 500
+			font-weight: 600
 			font-size: 20px
 			position: absolute
-			bottom: 10px
-			left: 0
+			bottom: 8px
+			left: 12px
 			z-index: 10
 		input
 			border: 1px solid #252525
@@ -98,3 +100,10 @@
 			width: 298px
 			height: 48px
 			position: relative
+			padding-left: 40px
+			&::placeholder
+				font-size: 18px
+				color: #BCBFC7
+			&:focus
+				border: 2px solid #252525
+
