--- a/app/styles/sass/_config.sass
+++ b/app/styles/sass/_config.sass
@@ -14,8 +14,9 @@ $gutter: $grid-gutter-width
 
 @import 'node_modules/bootstrap/scss/bootstrap-reboot.scss' // Bootstrap Reboot collection
 @import 'node_modules/bootstrap/scss/mixins/_breakpoints.scss' // Bootstrap Breakpoints mixin
+@import 'node_modules/bootstrap/scss/_accordion.scss'
 // @import 'node_modules/bootstrap/scss/bootstrap-grid.scss' // Optional Bootstrap Grid
-// @import 'node_modules/bootstrap/scss/_utilities.scss' // Optional Bootstrap Utilites
+// @import 'node_modules/bootstrap/scss/_utilities.scss' // Optional Bootstrap Utilities
 
 // FONTS LOAD SECTION
 
